# knowledgebase

./: .gitignore  CLAUDE.md
.amazonq/rules/: database-schema.md  frontend-pages.md  knowledgebase-architecture.md  project-rules.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/auth/: jwt.rs  middleware.rs
backend/src/handlers/: incidents.rs  login.rs  mod.rs
backend/src/models/: incident.rs
backend/src/routes/: auth.rs  incidents.rs  mod.rs
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/test/: page.tsx
frontend/app/test-style/: page.tsx
frontend/lib/: api.ts  theme.ts
frontend/pages/: debug.tsx  login.tsx
frontend/pages/incidents/: [id].tsx  index.tsx  new.tsx
